Release version 2.5.2 1. overflow-y for preset-theme-buttons set to auto so that the scrollbar is always visible 2. Renamed toggle buttons in Articles.jsx 3. Fixed font weight for ViewCountAnimator component 4. Updated packages

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -337,7 +337,7 @@ header {
   gap: 10px;
   width: 100%;
   height: 50%;
-  overflow-y: auto;
+  overflow-y: scroll;
   justify-content: space-between;
 }
 
